- Gothik: Adjusted and re-implemented warnings for the deaths of Unrelenting Riders and Unrelenting Death Knights.
- Kel'Thuzad: Registered SPELL_CAST_START. This should allow the addon to process this Event using the scripting from Anub'Rekhan for Impale.
- Kel'Thuzad: Attempted a fix for Phase 3 timers.
- Guild Specific: Updated guild whitelist to toxic and toxicity on Andorhal.
- Guild Specific: Updated the guild officer list for toxic to match the current officer roster.
- Guild Specific: Updated the tank whitelist to include Nato.
----------------------------------------------------------------------------------------------------
v1.87 - 19/12/2020
- 4 Horsemen: Resolved issues with the enrage timer.
----------------------------------------------------------------------------------------------------
v1.88 - 15/01/2020
- FINALLY fixed the guild check function. The popup that requires you to reload on login will no longer fire!
- Some KT updates.
----------------------------------------------------------------------------------------------------
v1.89 - 20/02/2020
- Renamed to Sky Boss Mods, removed some unused features.
----------------------------------------------------------------------------------------------------
v8.01 - 21/02/2020
- Renamed to Szyler Boss Mods, removed Toxic spy channels stuff.
----------------------------------------------------------------------------------------------------
v8.02 - 29/02/2020
- Added Focus magic ability check
- Removed limitations on pulltimerSound
- Added guild variable SBM channels 
- Enabled officer menu for everyone
- pulltimerSound, checkversion and ability checks only work with guildSBM channels, onLoginVersion still sent in SBMSCRIPT.
----------------------------------------------------------------------------------------------------
v8.03 - 05/03/2020
- Added raid marks on adds on TwinEmperors
----------------------------------------------------------------------------------------------------