@@ -130,8 +130,13 @@ UIDROPDOWNMENU_MENU_VALUE
 
 local function createChannelName()
 	myguildName,_,_,_ = GetGuildInfo("player");
+	if (myguildName == nil) then
+		guildChannel="NoGuildSBM" 
+		return;
+	else	
 	noSpaceGuildName = gsub(myguildName, "%s+", "")
 	guildChannel = noSpaceGuildName.."SBM"
+	end
 end
 
 DBM:Schedule(19, createChannelName)
@@ -143,8 +148,8 @@ function DBF_Settings_Menuofdoom()
 		     /////// FIRST MENU \\\\\\\\
 		     ***************************************]]--
 		
-		local ShowEXTRAOfficer = true;
-		local ShowOfficer = true;
+		local ShowEXTRAOfficer = false;
+		local ShowOfficer = false;
 		amnt = 1; -- amount of white spaces
 		guildName,_,guildRankIndex = GetGuildInfo("player");
 		
@@ -152,61 +157,10 @@ function DBF_Settings_Menuofdoom()
 		local REALM_NAME = GetRealmName();
 		local myguildName, myguildRankName, myguildRankIndex, myguildRealm = GetGuildInfo(myName)
 	
-		if(REALM_NAME == "Andorhal - No-Risk") then
-			if(myguildName == "toxicity") then
-				if(myguildRankIndex == 0 or myguildRankIndex == 1 or myguildRankIndex == 2) then
-					ShowOfficer = true;
-					ShowEXTRAOfficer = false;
-					amnt = 1;
-				end
-			elseif(myguildName == "Long Live Cenarius") then
-				if(myguildRankIndex == 0 or myguildRankIndex == 1) then
-					ShowOfficer = true;
-					ShowEXTRAOfficer = true;
-					amnt = 1;
-				end
-			elseif(myguildName == "Exiled") then
-				if(myguildRankIndex == 0 or myguildRankIndex == 1 or myguildRankIndex == 2 or myguildRankIndex == 3) then
-					ShowOfficer = true;
-					amnt = 1;
-				end			
-			elseif(myguildName == "HordeGuards") then
-				if(myguildRankIndex == 0 or myguildRankIndex == 1) then
-					ShowOfficer = true;
-					amnt = 1;
-				end
-			elseif(ShowOfficer == false) then
-				if(myguildName) then
-					if(myguildRankIndex == 0 or myguildRankIndex == 1) then
-						ShowOfficer = true;
-						amnt = 1;
-					end
-				end
-			end	
-		elseif(REALM_NAME == "Laughing Skull - High-Risk") then
-			if(myguildName == "Method") then
-				if(myguildRankIndex == 0 or myguildRankIndex == 1 or myguildRankIndex == 2) then
-					ShowOfficer = true;
-					amnt = 1;
-				end
-			elseif(ShowOfficer == false) then
-				if(myguildName) then
-					if(myguildRankIndex == 0 or myguildRankIndex == 1) then
-						ShowOfficer = true;
-						amnt = 1;
-					end
-				end
-			end	
-		else
-		-----DEBUG-----
-			if(ShowOfficer == false) then
-				if(myguildName) then
-					if(myguildRankIndex == 0 or myguildRankIndex == 1) then
-						ShowOfficer = true;
-						amnt = 1;
-					end
-				end
-			end	
+		if (myguildName ~= "NoGuildSBM") then
+			ShowOfficer = true;
+			ShowEXTRAOfficer = true;
+			amnt = 1;
 		end
 	
 			 
@@ -228,7 +182,7 @@ function DBF_Settings_Menuofdoom()
 		
 		if(ShowOfficer) then
 			info = {};
-			info.text = "Officer";
+			info.text = "Raid Assistant";
 			info.hasArrow = 1;
 			info.notCheckable = 1;
 			info.value = "OfficerMenu";
@@ -315,7 +269,7 @@ function DBF_Settings_Menuofdoom()
 					
 		if(UIDROPDOWNMENU_MENU_VALUE == "OfficerMenu") then			
 			info = {};
-			info.text = "Officer Commands";
+			info.text = "Raid Assistant Commands";
 			info.isTitle = 1;
 			info.notCheckable = 1;
 			info.disabled = 1;
