@@ -314,4 +314,11 @@ v8.02 - 29/02/2020
 ----------------------------------------------------------------------------------------------------
 v8.03 - 05/03/2020
 - Added raid marks on adds on TwinEmperors
+- Added Void Zone warning to 4h
+- Added Soul Harvest timer (Gothic)
+- Fixed some errors and typos
+- Added spore timer to Loatheb
+- Fixed error for people without guilds
+- Removed officer for people without guilds. 
+- Renamed officer tab in DBF to Raid Assistant
 ----------------------------------------------------------------------------------------------------
